# Cplus_compiler

./: .gitignore  Assembly_generator.cpp  CMakeLists.txt  CPP.HINT  Custom_operators.hpp  Doxyfile  Prepreprocessor.py  README.md  Text_printer.cpp  main.cpp  variables.hpp
C plus language rules/: CplusArchitecture.drawio  WebRules.html  style.css
Language_rules/html/: annotated.html  annotated_dup.js  classes.html  dir_104a29c7782891823368fca079d559f0.html  dir_12f7eacb3f9a043a1d74cf18ed947db8.html  dir_12f7eacb3f9a043a1d74cf18ed947db8.js  dir_14e13895ffea5f823080bb8af83928d2.html  dir_14e13895ffea5f823080bb8af83928d2.js  dir_1b82a949ba92b2781a82a2e7248a6c70.html  dir_2227d68688730f11b738d309a3a48fd9.html  dir_2227d68688730f11b738d309a3a48fd9.js  dir_2890b119191d57d6eeb577346bc4051b.html  dir_2890b119191d57d6eeb577346bc4051b.js  dir_31eca597f3e31f25c837b2034f8ac0b3.html  dir_31eca597f3e31f25c837b2034f8ac0b3.js  dir_339cd78fe5616339800a9f5cfd386e02.html  dir_339cd78fe5616339800a9f5cfd386e02.js  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  dir_488aefb8a9f197f19524790feef738be.html  dir_514f1c3a2e475d9bb30bbbcde222f7ed.html  dir_514f1c3a2e475d9bb30bbbcde222f7ed.js  dir_5c407f899ae443f83a2016b4f73f8f33.html  dir_684d1dc0b47df4bc5e7e64b846fbd77f.html  dir_7b2a67672a943f0a0ef3421a42c2c555.html  dir_7b2a67672a943f0a0ef3421a42c2c555.js  dir_7ff48b1fd8af50e5abef40c43c9884e8.html  dir_7ff48b1fd8af50e5abef40c43c9884e8.js  dir_81ebc5bb2731d6b4d880dd7146d7b96c.html  dir_81ebc5bb2731d6b4d880dd7146d7b96c.js  dir_83bb63ad6ec1bb31516c753a67c47d9f.html  dir_871e112324774a008ba4b8ceb9474e00.html  dir_871e112324774a008ba4b8ceb9474e00.js  dir_9d1f4289083dcbaa958e2eb5d7881fa8.html  dir_9d1f4289083dcbaa958e2eb5d7881fa8.js  dir_a725f7ea06a3d78455e4abb534d77b1a.html  dir_a725f7ea06a3d78455e4abb534d77b1a.js  dir_a72840ac272c0a2584187fdcc61701f4.html  dir_b91af27feac8f5d39f9772fa61f4c1d5.html  dir_b91af27feac8f5d39f9772fa61f4c1d5.js  (+17 more)
Language_rules/html/search/: all_1.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
Language_rules/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
built_in_libs/: ExampleFile.cp  IO.cp
core/Functional/: FileAccessController.cpp  MemoryController.cpp
core/Functional/strategies/: CompileStrategy.cpp  IStrategy.cpp  Strategy_context.cpp  VMStrategy.cpp
core/Tests/: BaseTest.hpp  NegativeTests.cpp  PositibeTests.cpp  PositiveTests.cpp
core/Tests/compile_entities/: CompilePositiveTests.cpp
core/Tests/vm_entities/: VMnegativeTests.cpp  VMpositiveTests.cpp
core/data/: Global_data.hpp  IMain_types.hpp  Load_data.hpp  Main_types.hpp  Main_types_compile.cppm  Main_types_compile.hpp  Main_types_controllers.cppm  Main_types_controllers.hpp  Main_types_vm.cppm  Main_types_vm.hpp  Variables.hpp
core/data/Exceptions/: AssemblyGeneratorException.cpp  BaseException.cpp  BaseException.hpp  BinaryGeneratorException.cpp  LexerException.cpp  LinkerException.cpp  PreprocessorException.cpp
core/data/dependencies/: catch_amalgamated.hpp  termcolor.hpp
core/data/exceptions/: AnalyzerException.hpp  AssemblyGeneratorException.cpp  AssemblyGeneratorException.hpp  BaseException.hpp  BinaryGeneratorException.cpp  BinaryGeneratorException.hpp  CompilerModeException.cpp  CompilerModeException.hpp  FileAccessControllerException.cpp  FileAccessControllerException.hpp  LexerException.cpp  LexerException.hpp  LinkerException.cpp  LinkerException.hpp  MainExceptions.cpp  MainExceptions.hpp  MemoryControllerException.cpp  MemoryControllerException.hpp  ParserException.hpp  PreprocessorException.cpp  PreprocessorException.hpp  VirtualMachineException.cpp  VirtualMachineException.hpp
core/entities/: Assembly_generator.cpp  Binary_generator.cpp  Lexer.cpp  Linker.cpp  Logger.cpp  Logger.cppm  Logger.hpp  Preprocessor.cpp  Text_printer.cpp  VirtualMachine.cpp  VirtualMachineConsole.cpp
core/entities/VM/: FriendClassesVM.hpp  VirtualMachine.cpp  VirtualMachineConsole.cpp
core/entities/compile_entities/: Analyzer.cpp  Assembly_generator.cpp  Binary_generator.cpp  FriendClassesCompile.hpp  Friend_classes_compile.hpp  Lexer.cpp  Linker.cpp  Parser.cpp  Preprocessor.cpp
core/functional/: FileAccessController.cpp  MemoryController.cpp
core/functional/controllers_entities/: FileAccessController.cpp  MemoryController.cpp
core/functional/strategies/: CompileStrategy.cpp  IStrategies.cpp  IStrategies.hpp  (+3 more)
static/: Constants.hpp  CplusModel.hpp  Custom_operators.hpp  Processor_registers.hpp  UtilFuncs.hpp  Util_funcs.cppm  Util_funcs.hpp
(+181 files in other folders)
